# ncnn-android-yolox

./: build.gradle  local.properties
app/: build.gradle
app/src/main/assets/: yolox-nano-coco.param  yolox-nano.param  yolox-tiny-coco.param  yolox-tiny.param
app/src/main/java/com/tencent/ncnnyolox/: Constants.java  CustomProber.java  JNICallbackInterface.java  MainActivity.java  NcnnYolox.java  SerialListener.java  SerialSocket.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolox.cpp  yolox.h  yoloxncnn.cpp
app/src/main/jni/sdk/native/jni/: OpenCVModules_arm64_v8a-release.cmake  OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi_v7a-release.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_x86-release.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64-release.cmake  OpenCVModules_x86_64.cmake
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
